[gd_scene load_steps=6 format=3 uid="uid://bk6pqsdpq3jg2"]

[ext_resource type="PackedScene" uid="uid://c2m7un3utsm6x" path="res://rooms/room.tscn" id="1_o4axh"]
[ext_resource type="PackedScene" uid="uid://bqrkndx6b0j15" path="res://rooms/doors/up_door.tscn" id="2_tdvh1"]
[ext_resource type="Script" path="res://scripts/rooms/fight_room.gd" id="2_vemoe"]
[ext_resource type="Script" path="res://godot_state_charts_examples/ant_hill/marker/marker.gd" id="3_qhhqs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhipf"]
size = Vector2(64, 160)

[node name="FightRoom" instance=ExtResource("1_o4axh")]
script = ExtResource("2_vemoe")

[node name="Doors" type="Node2D" parent="." index="1"]

[node name="Door" parent="Doors" index="0" instance=ExtResource("2_tdvh1")]
position = Vector2(0, 352)
scale = Vector2(0.5, 2.5)

[node name="Door2" parent="Doors" index="1" instance=ExtResource("2_tdvh1")]
position = Vector2(832, 352)
scale = Vector2(0.5, 2.5)

[node name="PlayerDetector" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" index="0"]
position = Vector2(64, 432)
shape = SubResource("RectangleShape2D_rhipf")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerDetector" index="1"]
position = Vector2(800, 432)
shape = SubResource("RectangleShape2D_rhipf")

[node name="EnemyPositions" type="Node2D" parent="." index="3"]

[node name="Marker" type="Marker2D" parent="EnemyPositions" index="0"]
position = Vector2(416, 408)
script = ExtResource("3_qhhqs")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
